<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/config_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/config_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/config_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/config_title">

        <EditText
            android:id="@+id/ip_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:inputType="text"
            android:layout_marginEnd="2dp"
            android:hint="@string/ip_address_text" />

        <EditText
            android:id="@+id/port"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:inputType="number"
            android:layout_marginStart="2dp"
            android:hint="@string/port_text" />

    </LinearLayout>

    <Button
        android:id="@+id/config_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/init_network_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/config_data" />

    <TextView
        android:id="@+id/sensor_order_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sensor_data_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/config_button" />

    <LinearLayout
        android:id="@+id/sensor_order_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/sensor_order_title">

    <TextView
        android:id="@+id/element1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginVertical="5dp"
        android:text="Élément 1" />

    <TextView
        android:id="@+id/element2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginVertical="5dp"
        android:text="Élément 2" />

    </LinearLayout>

    <Button
        android:id="@+id/swap_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Échanger"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sensor_order_data" />

    <TextView
        android:id="@+id/sensor_data_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/sensor_received_data_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/swap_button" />

    <LinearLayout
        android:id="@+id/sensor_luminosity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/sensor_data_title">

        <TextView
            android:id="@+id/luminosity_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/luminosity_text"
            android:textSize="18sp"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:id="@+id/luminosity_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="16%"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sensor_temperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/sensor_luminosity">

        <TextView
            android:id="@+id/temperature_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature_text"
            android:textSize="18sp"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:id="@+id/temperature_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="23°C"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>